fixed overflow settings

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Raleway', sans-serif;
     max-width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 /* Center the entire page and other elements */
